# react-seo-bridge

./: .gitignore  CHANGELOG.md  Dockerfile.prerender  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: roadmap_interest.yml
rsb/: __init__.py  __main__.py  cli.py  schemas.py
rsb/analyser/: __init__.py  ast_parser.py  bundle_analyser.py  cwv_estimator.py  metadata_detector.py  project_scanner.py  route_mapper.py
rsb/generators/: __init__.py  cloudflare_worker.py  express_middleware.py  nginx_config.py  robots_gen.py  sitemap_gen.py  vercel_config.py
rsb/prerender/: __init__.py  bot_agents.py  cache.py  renderer.py  server.py
rsb/reporters/: __init__.py  audit_report.py
rsb/reporters/templates/: audit.md.j2
rsb/scaffold/: __init__.py  component_classifier.py  context_builder.py  token_chunker.py
rsb/scaffold/prompt_templates/: project_context.md.j2  source_files.md.j2  system_instructions.md.j2
templates/: cloudflare_worker.js.j2  express_middleware.js.j2  nginx_snippet.conf.j2  robots.txt.j2  sitemap.xml.j2  vercel_json.j2  vercel_middleware.js.j2  wrangler_toml.j2
tests/: conftest.py  test_bot_agents.py  test_bundle_analyser.py  test_cache.py  test_component_classifier.py  test_context_builder.py  test_cwv_estimator.py  test_generators.py  test_metadata_detector.py  test_project_scanner.py  test_route_mapper.py  test_token_chunker.py
tests/fixtures/cra_basic/: package.json
tests/fixtures/cra_basic/src/: App.jsx  index.js
tests/fixtures/cra_basic/src/pages/: About.jsx  Home.jsx  Product.jsx
tests/fixtures/vite_with_router/: package.json
tests/fixtures/vite_with_router/src/: App.jsx
